# Unipd-ComputerVision2021-2022

./: README.md  selSearch.py
src/: CMakeLists.txt
src/Detection_Segmentation/: HandDetection.cpp  HandDetection.h
src/Detection_Segmentation/meanshift/: MeanShift.cpp  cpp_test.cpp
src/Detection_Segmentation/traincascade_classifiers/expanded/12/hands_over_face/cascade/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml
src/Detection_Segmentation/traincascade_classifiers/expanded/24/hands_over_face/cascade/: cascade.xml  info.txt  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
src/Detection_Segmentation/traincascade_classifiers/expanded/24/myleft/cascade/: cascade.xml  info.txt  stage0.xml  stage1.xml  stage10.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/Detection_Segmentation/traincascade_classifiers/expanded/24/myright/cascade/: cascade.xml  info.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
src/Detection_Segmentation/traincascade_classifiers/expanded/24/yourleft/cascade/: cascade.xml  info.txt  stage0.xml  stage1.xml  (+10 more)
src/Evaluation/: main.cpp
src/Evaluation/images/our_det/: 02.txt  08.txt  09.txt  14.txt  15.txt  18.txt  19.txt  20.txt  22.txt  25.txt  27.txt  28.txt  29.txt
src/Evaluation/include/: evaluate.cpp  evaluate.h
src/Results_Final/our_det_final/: 01.txt  03.txt  04.txt  05.txt  06.txt  07.txt  10.txt  11.txt  12.txt  13.txt  16.txt  17.txt  21.txt  23.txt  24.txt  26.txt  30.txt
(+198 files in other folders)
